# harmonic-deferents

./: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  rsw.toml
.github/workflows/: dev.yml  release.yml
astro/src/pages/: index.astro  nannou-embed.astro
crates/nannou-1/: Cargo.toml
crates/nannou-1/src/: console.rs  lib.rs  main.rs  sketch.rs  util.rs
crates/nannou-1/src/fourier/: fourier.rs  mod.rs  tests.rs
crates/nannou-1/src/sketch/: mod.rs  run_app.rs
crates/nannou-1/src/sketch/model/: mod.rs  model.rs  tests.rs
crates/nannou-1/src/sketch/model/epicycle/: compute_render.rs  construct.rs  draw.rs  epicycle.rs  mod.rs
crates/nannou-1/src/sketch/model/figure/: mod.rs
crates/nannou-1/src/sketch/model/resample/: mod.rs  tests.rs
