[package]
name = "harmonic_deferents"
description = "Harmonic Deferents is an application that allows you to make music with Fourier transforms."
version = "0.0.1"
authors = ["CyanMatter"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
# Enable debug symbols in release mode.
# debug = true

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.32"
async-std = { version = "1.10.0", features = ["unstable"] }
nannou = { version="0.18.1", git ="https://github.com/nannou-org/nannou.git", rev = "287be8a4d075b17332ca0bf34649f5d25e751c00", features =["wasm-experimental"]}
# Please keep tabs on `rustfft` updates. An improved version for wasm was committed, but unreleased as of writing.
# https://github.com/ejmahler/RustFFT/commit/147364419743caecb5b88334e44df04fc5c1bf89
rustfft = "6.1.0"
js-sys = "0.3.64"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it should only be
# enabled in debug mode.
console_error_panic_hook = "0.1.5"
itertools = "0.11.0"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

# # These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.33"
futures = "0.3.28"
js-sys = "0.3.22"
